jitfailure-dolfin_expression_0834823bf0c1438dceda8ce9970379b0/error.log
/tmp/tmpcco2xhkc/dolfin_expression_0834823bf0c1438dceda8ce9970379b0.cpp: In member function ‘virtual void dolfin::dolfin_expression_0834823bf0c1438dceda8ce9970379b0::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpcco2xhkc/dolfin_expression_0834823bf0c1438dceda8ce9970379b0.cpp:66:50: error: ‘EXP’ was not declared in this scope
           values[0] = rhoMax-((rhoMax-rhoMin)/(1+EXP(Inclination*(-t+t0)))+rhoMin)+rhoMin;
                                                  ^~~
/tmp/tmpcco2xhkc/dolfin_expression_0834823bf0c1438dceda8ce9970379b0.cpp: In member function ‘virtual double dolfin::dolfin_expression_0834823bf0c1438dceda8ce9970379b0::get_property(std::__cxx11::string) const’:
/tmp/tmpcco2xhkc/dolfin_expression_0834823bf0c1438dceda8ce9970379b0.cpp:78:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
           ^~
/tmp/tmpcco2xhkc/dolfin_expression_0834823bf0c1438dceda8ce9970379b0.cpp:78:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
                                                         ^~
